# jquiz

./: .gitignore  Makefile  README  todo-kanji
src/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  TODO  autogen.sh  config.h.in  configure  configure.ac  control_frame.c  control_frame.h  finish_frame.c  finish_frame.h  groupnumber_dialog.c  groupnumber_dialog.h  main.c  message_frame.c  message_frame.h  quiz_frame.c  quiz_frame.h  quizpad.c  quizpad.h  tomoe-canvas.c  tomoe-canvas.h  tomoe-writing.c  tomoe-writing.h  wagomu.c  wagomu.h
src/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
src/wagomu/: README.txt
